--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,20 @@
         <url>http://www.arcanix.com/</url>
     </developer>
   </developers>
+  
+  <build>
+  	<plugins>
+  		<plugin>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-compiler-plugin</artifactId>
+    		<configuration>
+        		<source>1.7</source>
+        		<target>1.7</target>
+        		<showDeprecation>true</showDeprecation>
+        		<showWarnings>true</showWarnings>
+    		</configuration>
+		</plugin>
+  	</plugins>
+  </build>
+  
 </project>
